feat(Layout): Added vanilla Layout renderers

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 <body>
     <json-forms
       data='{"foo":"bar","hello":"world"}'
+      uischema='{"type":"VerticalLayout","elements":[{"type":"HorizontalLayout","elements":[{"type":"Control","scope":"#/properties/foo"},{"type":"Control","scope":"#/properties/hello"}]}]}'
     ></json-forms>
-    <script src="../index.ts" defer></script>
 </body>
 
 </html>
